调整图片大小 还是一行排5张图片

--- a/albumList.html
+++ b/albumList.html
@@ -11,7 +11,7 @@
 		<div class="head-top">
 			<div class="head-cent">
 				<h1>Tony的个人空间</h1>
-				<p>http:1793264418@qq.com</p>
+				<p>http:1793****18@qq.com</p>
 			</div>
 			<div class="head-nav">
 				<div class="head-cent" >
@@ -23,16 +23,17 @@
                     </div>
                     <div class="nav-list">
                     	<ul>
-                        	<li><a href="javascript:;">Tony</a></li>
-                        	<li><a href="javascript:;">Tony</a></li>
-                        	<li><a href="javascript:;">Tony</a></li>
-                        	<li><a href="javascript:;">Tony</a></li>
+                        	<li><a href="javascript:;">今天</a></li>
+                        	<li><a href="javascript:;">明天</a></li>
+                        	<li><a href="javascript:;">后天</a></li>
+                        	<li><a href="javascript:;">现在</a></li>
                         </ul>
                     </div>
                 </div>
 			</div> 
 		</div>
-		
+
+		<!--//显示图片列表信息 图片大小设置为宽度100%；高度自动适应-->
 		<div id="albynList">
 			<div class="alist">
 				<ul>
@@ -40,7 +41,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/1.jpg">
-									<img src="img/userHome/1.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
@@ -52,7 +53,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/2.jpg">
-									<img src="img/userHome/2.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
@@ -64,7 +65,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/3.jpg">
-									<img src="img/userHome/3.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
@@ -76,7 +77,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/4.jpg">
-									<img src="img/userHome/4.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
@@ -88,7 +89,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/4.jpg">
-									<img src="img/userHome/4.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
@@ -100,7 +101,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/4.jpg">
-									<img src="img/userHome/4.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
@@ -112,7 +113,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/4.jpg">
-									<img src="img/userHome/4.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
@@ -124,7 +125,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/4.jpg">
-									<img src="img/userHome/4.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
@@ -137,7 +138,7 @@
 						<div class="photo">
 							<div class="photoImg">
 								<a href="javascript:;" datsrc="img/userHome/4.jpg">
-									<img src="img/userHome/4.jpg" />
+									<img src="img/userHome/p1.jpg" />
 								</a>
 							</div>
 							<div class="photoInfor">
